# rag-system

./: .gitignore  README.md  docker-compose.yml
backend/: agent.py  chunking.py  config.py  database.py  embedding.py  eval.py  ingestion.py  main.py  parsing.py  pyproject.toml  reranking.py  retrieval.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AnalyticsDashboard.jsx  ChatInput.jsx  ChatWindow.jsx  CitationTooltip.jsx  EmptyState.jsx  FeedbackButtons.jsx  GuidedTour.jsx  Header.jsx  MessageBubble.jsx  Sidebar.jsx  SourcesPanel.jsx
frontend/src/context/: ThemeContext.jsx
