[project]
name = "rag-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepeval>=4.0.5",
    "fastapi>=0.136.3",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "uvicorn[standard]>=0.49.0",
    "weaviate-client>=4.21.3",
]
